--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,6 @@
 alembic==1.8.1
 aniso8601==6.0.0
 Babel==2.10.3
-black==22.6.0
 click==8.1.3
 distlib==0.3.5
 filelock==3.7.1
@@ -25,6 +24,7 @@ psycopg2-binary==2.9.3
 psycopg2-pool==1.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
+python-dotenv==0.20.0
 pytz==2019.1
 six==1.12.0
 SQLAlchemy==1.3.4
